Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67425

Converting QImage to Mono causes artifacts

    XMLWordPrintable

Details

    Description

      When converting some QImages from QImage::Format_Indexed8 to QImage::Format_Mono using QImage::convertToFormat() with default dithering Qt::DiffuseDither the result contains artifacts. See the attached converted_artifacts.bmp. The artifacts are not visible with other dithering modes.

      The attached example (qtbug67425.zip) can be used to reproduce the problem. The package contains also another image, which is created by removing features from the original image until the problem was not reproducible.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes